# edb-demo

./: .gitignore  Cargo.toml  EDBTEST.toml  README.md  deploy.sh  deploy_script.sh  dev-conf.json
src/: main.rs  simple.asm  simple.ast.json  simple.bin-runtime  simple.sol
