[package]
name = "edb-demo"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]

[dependencies]
edb-core = { path = "../edb/core" }
clap = "2.32.0"
text_io = "0.1.7"
sputnikvm = "0.10.1"
ethabi = "*"
etcommon-bigint = "0.2.9"
rustc-hex = "1.0"
log = "*"
fern = { version = "0.5.6", features = ["colored"]}
chrono = "0.4"
failure = "*"
web3 = { git = "https://github.com/tomusdrw/rust-web3", branch = "master"}
